# femtoClaw

./: .gitignore  BUILD_GUIDE.md  CHANGELOG.md  Cargo.toml  README.md  build.bat  build.sh  build_interactive.bat  build_interactive.sh  execution_audit_v09.md  i18n_refactoring.md
.github/workflows/: ci.yml
.tmp/femtoclaw_test/: test_1774275133223573000.db  test_1774275133223940400.db  test_1774275133826860800.db  test_1774275133826860800.db.backup  test_1774275133976623100.db  test_1774275134136348200.db  test_1774275134755108300.db  test_1774275135190615300.db  test_1774275135895493000.db
docs/: femtoclaw.service
skills/core/: auto_summarize.rhai  code_review.toml  file_reader.toml  summarizer.toml
src/: config.rs  error.rs  lib.rs  main.rs  sandbox.rs
src/core/: agent.rs  agent_manager.rs  bootstrap.rs  chat_loop.rs  context.rs  install.rs  mod.rs  persona.rs  schedule.rs  telegram.rs  tool_protocol.rs
src/db/: compress.rs  mod.rs  store.rs
src/i18n/: en.rs  ja.rs  keys.rs  ko.rs  mod.rs  zh_cn.rs  zh_tw.rs
src/security/: crypto.rs  jail.rs  mod.rs
src/skills/: loader.rs  mod.rs  rhai_engine.rs
src/tools/: executor.rs  guide.rs  mod.rs  prompt.rs  registry.rs
src/tui/: app.rs  mod.rs  theme.rs
tests/: offline_queueing.rs  simulation_30turn.rs
